<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookMart2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_listing_info">ListingInfoActivity</string>
    <string name="listingBookInfoHeaderLabel">Book Information</string>
    <string name="listingInfoTitleKeyLabel">Title:\t</string>
    <string name="listingInfoTitleValueLabel">*BOOK TITLE*</string>
    <string name="listingInfoAuthorKeyLabel">Author:\t</string>
    <string name="listingInfoAuthorValueLabel">*BOOK AUTHOR*</string>
    <string name="listingInfoPublisherKeyLabel">Publisher:\t</string>
    <string name="listingInfoPublisherValueLabel">*BOOK PUBLISHER*</string>
    <string name="listingInfoGenreKeyLabel">Genre:\t</string>
    <string name="listingInfoGenreValueLabel">*BOOK GENRE*</string>
    <string name="listingInfoISBNKeyLabel">ISBN:\t</string>
    <string name="listingInfoISBNValueLabel">*BOOK ISBN*</string>
    <string name="listingInfoEditionKeyLabel">Edition:\t</string>
    <string name="listingInfoEditionValueLabel">*BOOK EDITION*</string>
    <string name="listingInfoPubDateKeyLabel">Pub.Date:\t</string>
    <string name="listingInfoPubDateValueLabel">*BOOK PUBDATE*</string>
    <string name="listingInfoFormatKeyLabel">Format:\t</string>
    <string name="listingInfoFormatValueLabel">*BOOK FORMAT*</string>
    <string name="listingItemInfoHeaderLabel">Item Information</string>
    <string name="listingInfoConditionKeyLabel">Condition:\t</string>
    <string name="listingInfoConditionValueLabel">*ITEM CONDITION*</string>
    <string name="listingInfoAskingPriceKeyLabel">Asking \nprice:\t</string>
    <string name="listingInfoAskingPriceValueLabel">*ASKING PRICE*</string>
    <string name="OfferButLabel">OFFER</string>
    <string name="title_activity_offer">OfferActivity</string>
    <string name="toSellerKey">To:\t</string>
    <string name="toSellerValue">*SELLER NAME*</string>
    <string name="forItemKey">For:\t</string>
    <string name="forItemValue">*ITEM*</string>
    <string name="listingInfoSellerKeyLabel">Seller:\t</string>
    <string name="listingInfoSellerValueLabel">*SELLER*</string>
    <string name="title_activity_add_to__offer">Add_to_Offer</string>
    <string name="title_activity_buying">Buying</string>
    <string name="title_activity_add__listing">Add_Listing</string>
    <string name="srchFldHint">book to search for</string>
    <string name="srchBtn">Search</string>
    <string name="srchHint">search for books</string>
    <string name="resultsHint">results go here</string>
    <string name="title_activity_messenging">MessengingActivity</string>
	<string name="bidInDollars">$\t</string>
	<string name="bidInDollarsHint">XXX.XX\t</string>
	
</resources>
