<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".OfferActivity" >

    <TextView
        android:id="@+id/toSellerKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toSellerKey"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/toSellerValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toSellerKey"
        android:text="@string/toSellerValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/forItemKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toSellerKey"
        android:text="@string/forItemKey"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/forItemValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toSellerValue"
        android:layout_toRightOf="@+id/forItemKey"
        android:text="@string/forItemValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ListView
        android:id="@+id/offerList"
        android:layout_below="@+id/moneyBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/moneyBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forItemValue"
        android:layout_toRightOf="@+id/toSellerKey"
        android:hint="@string/bidInDollarsHint"
        android:inputType="phone"
        android:ems="10" 
        >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/MoneySign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/moneyBar"
        android:layout_alignBottom="@+id/moneyBar"
        android:layout_alignParentLeft="true"
        android:text="@string/bidInDollars"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
