<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Add_Listing" >

    <EditText 
        android:id="@+id/searchField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/srchFldHint"
        />
        
    <Button 
        android:id="@+id/searchButton"
        android:layout_toRightOf="@id/searchField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/srchBtn"
        android:onClick="onSearchButtonClick"
        />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:queryHint="@string/resultsHint"
        android:layout_below="@id/searchButton"
        />

</RelativeLayout>
